# microsoft-agt-rust

./: Cargo.toml  LICENSE  README.md  chaos_test.sh
architecture/: ADR-001-storage-backends.md  ADR-002-cli-authentication.md  ADR-003-wire-protocol.md  ADR-004-attested-adapters.md  ADR-005-grpc-migration.md  ADR-006-distributed-consensus.md  ADR-007-siem-export.md  agent_mesh_expansion_plan.md  cargo_workspace.md
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/core/mesh/: Cargo.toml
crates/core/mesh/src/: audit.rs  lib.rs
crates/core/mesh/src/identity/: agent_id.rs  keystore.rs  mod.rs  mtls.rs  registry.rs  registry_http.rs  risk.rs
crates/core/os/: Cargo.toml
crates/core/os/src/: lib.rs
crates/core/runtime/: Cargo.toml
crates/core/runtime/src/: lib.rs
crates/core/runtime/src/rings/: enforcer.rs  escalation.rs  mod.rs
crates/core/runtime/src/saga/: orchestrator.rs
crates/core/sre/: Cargo.toml
crates/core/sre/src/: circuit_breaker.rs
crates/daemon/: Cargo.toml  build.rs
crates/daemon/src/: gateway.rs  lib.rs
crates/daemon/src/grpc/: auth.rs  convert.rs  discovery.rs  escalation.rs  mod.rs  registry.rs
crates/ext/compliance/: Cargo.toml
crates/ext/compliance/src/: lib.rs
crates/ext/discovery/: Cargo.toml
crates/ext/discovery/src/: lib.rs
crates/ext/hypervisor/: Cargo.toml
crates/ext/lightning/: Cargo.toml
crates/ext/marketplace/: Cargo.toml
crates/ext/mcp-governance/: Cargo.toml  build.rs
crates/ext/mcp-governance/src/: lib.rs  store.rs
crates/integrations/adapter-core/: Cargo.toml
crates/integrations/autogen/: Cargo.toml
crates/integrations/langchain/: Cargo.toml
proto/agt/v1/: discovery.proto  escalation.proto  registry.proto  types.proto
requirements/: package_mapping.md
