[workspace]
members = [
    "crates/core/os",
    "crates/core/mesh",
    "crates/core/runtime",
    "crates/core/sre",
    "crates/ext/compliance",
    "crates/ext/discovery",
    "crates/ext/hypervisor",
    "crates/ext/lightning",
    "crates/ext/marketplace",
    "crates/ext/mcp-governance",
    "crates/integrations/adapter-core",
    "crates/integrations/langchain",
    "crates/integrations/autogen",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Microsoft-AGT Rust Migration Team"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["serde"] }
ring = "0.17"
rcgen = "0.13"
tokio-tungstenite = "0.26"
futures-util = "0.3"
