[workspace]
members = [
    "crates/core/os",
    "crates/core/mesh",
    "crates/core/runtime",
    "crates/core/sre",
    "crates/ext/compliance",
    "crates/ext/discovery",
    "crates/ext/hypervisor",
    "crates/ext/lightning",
    "crates/ext/marketplace",
    "crates/ext/mcp-governance",
    "crates/integrations/adapter-core",
    "crates/integrations/langchain",
    "crates/integrations/autogen",
    "crates/cli",
    "crates/daemon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Microsoft-AGT Rust Migration Team"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
ring = "0.17"
rcgen = "0.13"
tokio-tungstenite = "0.26"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"

argon2 = "0.5"
chacha20poly1305 = "0.10"
tempfile = "3.10"
axum = "0.8"
tower-http = { version = "0.6", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

