[package]
name = "agent-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
agent-mesh-core = { path = "../core/mesh" }
agent-runtime-core = { path = "../core/runtime" }
agent-ext-mcp-governance = { path = "../ext/mcp-governance" }
agent-ext-discovery = { path = "../ext/discovery" }
agent-ext-compliance = { path = "../ext/compliance" }
agent-daemon = { path = "../daemon" }
base64 = "0.22"
rand = "0.8"
hex = "0.4"
reqwest = { workspace = true }
ed25519-dalek = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio-stream = { workspace = true }
futures-core = { workspace = true }


[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.1"




[[bin]]
name = "agt"
path = "src/main.rs"
