[package]
name = "agent-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
agent-mesh-core = { path = "../core/mesh" }
agent-runtime-core = { path = "../core/runtime" }
agent-ext-discovery = { path = "../ext/discovery" }
agent-ext-mcp-governance = { path = "../ext/mcp-governance" }
agent-ext-compliance = { path = "../ext/compliance" }
tonic = { workspace = true }

prost = { workspace = true }
prost-types = { workspace = true }
tokio-stream = { workspace = true }
futures-core = { workspace = true }



[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.1"



