[package]
name = "agent-runtime-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
agent-mesh-core = { path = "../mesh" }
rand = "0.8"
base64 = "0.22"
ed25519-dalek = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
