[package]
name = "agent-ext-mcp-governance"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
agent-mesh-core = { path = "../../core/mesh" }
agent-runtime-core = { path = "../../core/runtime" }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
